将 JAVA 版本降回 17 (19 后续会另开分支); 修复使用 nginx 等反代软件时客户端会出现超时问题; 更新检查机制更新, 现在只会检查同分支下的新版本, 同时修复只能检测一个版本的问题.