@@ -22,7 +22,7 @@ public class SetupSwing {
         System.setProperty("swing.aatext", "true");
 
         //UI 配置线程
-        Thread uiThread = Thread.startVirtualThread(() -> {
+        Thread uiThread = new Thread(() -> {
             long start = System.currentTimeMillis();
             //设置圆角弧度
             UIManager.put("Button.arc", 7);
@@ -54,9 +54,10 @@ public class SetupSwing {
 
             System.out.printf("UIThread Completed, Used %sms%n", System.currentTimeMillis() - start);
         });
+        uiThread.start();
 
         //字体更换线程
-        Thread fontThread = Thread.startVirtualThread(() -> {
+        Thread fontThread = new Thread(() -> {
             long start = System.currentTimeMillis();
             //设置字体
             try {
@@ -76,8 +77,9 @@ public class SetupSwing {
             }
             System.out.printf("FontThread Completed, Used %sms%n", System.currentTimeMillis() - start);
         });
+        fontThread.start();
 
-        Thread themeThread = Thread.startVirtualThread(() -> {
+        Thread themeThread = new Thread(() -> {
             long start = System.currentTimeMillis();
             //更新 UI
             try {
@@ -88,6 +90,7 @@ public class SetupSwing {
             }
             System.out.printf("ThemeThread Completed, Used %sms%n", System.currentTimeMillis() - start);
         });
+        themeThread.start();
 
         try {
             uiThread.join();
